src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: sans-serif;
  }
}

/* Animations for ChangingText.js */
@keyframes fadeOutAndDown {
  0% {
      opacity: 1;
      transform: translateY(0);
  }
  100% {
      opacity: 0;
      transform: translateY(30px);
  }
}

@keyframes fadeInAndUp {
  0% {
      opacity: 0;
      transform: translateY(30px);
  }
  100% {
      opacity: 1;
      transform: translateY(0);
  }
}

.fadeOutAndDown {
  animation: fadeOutAndDown 1s ease-out forwards;
}

.fadeInAndUp {
  animation: fadeInAndUp 1s ease-out forwards;
}

.rolesContainer {
  position: relative;
  height: 1.2em; /* adjust this value as necessary */
  overflow: hidden;
}

.role {
  position: absolute;
  width: 100%;
}

.role.fadeOutDown {
  animation-name: fadeOutDown;
}

.role.fadeInUp {
  animation-name: fadeInUp;
}

